src/danex/grammar/DanexParser.java
// Generated from grammar/DanexParser.g4 by ANTLR 4.9.2
package danex.grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DanexParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SINGLE_COMMENT=1, MULTI_COMMENT=2, WS=3, HASH=4, ARROW=5, LAMBDA=6, NULLCOAL=7, 
		COMPARATOR=8, MOD2=9, VARARGS=10, AND_AND=11, OR_OR=12, EQEQ=13, NEQ=14, 
		LE=15, GE=16, PLUSEQ=17, MINUSEQ=18, STAREQ=19, DIVEQ=20, MODEQ=21, IF=22, 
		ELSE=23, WHILE=24, DO=25, FOR=26, RETURN=27, THROW=28, EXIT=29, CLASS=30, 
		PUBLIC=31, PRIVATE=32, STATIC=33, TRUE=34, FALSE=35, NULL=36, USE=37, 
		AS=38, TRY=39, CATCH=40, FINALLY=41, ASYNC=42, AWAIT=43, IDENTIFIER=44, 
		NUMBER=45, STRING=46, PLUS=47, MINUS=48, STAR=49, DIV=50, MOD=51, LT=52, 
		GT=53, EQ=54, BANG=55, AND=56, OR=57, LPAREN=58, RPAREN=59, LBRACE=60, 
		RBRACE=61, SEMI=62, COMMA=63;
	public static final int
		RULE_compilationUnit = 0, RULE_statement = 1, RULE_importStmt = 2, RULE_classDecl = 3, 
		RULE_classBody = 4, RULE_classBodyMember = 5, RULE_methodDecl = 6, RULE_topLevelMethodDecl = 7, 
		RULE_resultDecl = 8, RULE_annotation = 9, RULE_modifier = 10, RULE_paramList = 11, 
		RULE_param = 12, RULE_methodBody = 13, RULE_block = 14, RULE_blockContent = 15, 
		RULE_expressionStatement = 16, RULE_ifStatement = 17, RULE_whileStatement = 18, 
		RULE_doWhileStatement = 19, RULE_forStatement = 20, RULE_tryStatement = 21, 
		RULE_resourceSpec = 22, RULE_resourceDecl = 23, RULE_exitStatement = 24, 
		RULE_throwStatement = 25, RULE_returnStatement = 26, RULE_assignment = 27, 
		RULE_assignOp = 28, RULE_expression = 29, RULE_lambdaExpr = 30, RULE_logicalOrExpr = 31, 
		RULE_logicalAndExpr = 32, RULE_nullCoalesceExpr = 33, RULE_comparisonExpr = 34, 
		RULE_additiveExpr = 35, RULE_multiplicativeExpr = 36, RULE_unaryExpr = 37, 
		RULE_primaryExpr = 38, RULE_doExpression = 39, RULE_tryExpression = 40, 
		RULE_functionCall = 41, RULE_literal = 42, RULE_type = 43;
	private static String[] makeRuleNames() {
		return new String[] {
			"compilationUnit", "statement", "importStmt", "classDecl", "classBody", 
			"classBodyMember", "methodDecl", "topLevelMethodDecl", "resultDecl", 
			"annotation", "modifier", "paramList", "param", "methodBody", "block", 
			"blockContent", "expressionStatement", "ifStatement", "whileStatement", 
			"doWhileStatement", "forStatement", "tryStatement", "resourceSpec", "resourceDecl", 
			"exitStatement", "throwStatement", "returnStatement", "assignment", "assignOp", 
			"expression", "lambdaExpr", "logicalOrExpr", "logicalAndExpr", "nullCoalesceExpr", 
			"comparisonExpr", "additiveExpr", "multiplicativeExpr", "unaryExpr", 
			"primaryExpr", "doExpression", "tryExpression", "functionCall", "literal", 
			"type"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, "'#'", "'=>'", "'->'", "'??'", "'<=>'", "'%%'", 
			"'...'", "'&&'", "'||'", "'=='", "'!='", "'<='", "'>='", "'+='", "'-='", 
			"'*='", "'/='", "'%='", "'if'", "'else'", "'while'", "'do'", "'for'", 
			"'return'", "'throw'", "'exit'", "'class'", "'public'", "'private'", 
			"'static'", "'true'", "'false'", "'null'", "'use'", "'as'", "'try'", 
			"'catch'", "'finally'", "'async'", "'await'", null, null, null, "'+'", 
			"'-'", "'*'", "'/'", "'%'", "'<'", "'>'", "'='", "'!'", "'&'", "'|'", 
			"'('", "')'", "'{'", "'}'", "';'", "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "SINGLE_COMMENT", "MULTI_COMMENT", "WS", "HASH", "ARROW", "LAMBDA", 
			"NULLCOAL", "COMPARATOR", "MOD2", "VARARGS", "AND_AND", "OR_OR", "EQEQ", 
			"NEQ", "LE", "GE", "PLUSEQ", "MINUSEQ", "STAREQ", "DIVEQ", "MODEQ", "IF", 
			"ELSE", "WHILE", "DO", "FOR", "RETURN", "THROW", "EXIT", "CLASS", "PUBLIC", 
			"PRIVATE", "STATIC", "TRUE", "FALSE", "NULL", "USE", "AS", "TRY", "CATCH", 
			"FINALLY", "ASYNC", "AWAIT", "IDENTIFIER", "NUMBER", "STRING", "PLUS", 
			"MINUS", "STAR", "DIV", "MOD", "LT", "GT", "EQ", "BANG", "AND", "OR", 
			"LPAREN", "RPAREN", "LBRACE", "RBRACE", "SEMI", "COMMA"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "DanexParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DanexParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class CompilationUnitContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(DanexParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public CompilationUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compilationUnit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DanexParserListener ) ((DanexParserListener)listener).enterCompilationUnit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DanexParserListener ) ((DanexParserListener)listener).exitCompilationUnit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DanexParserVisitor ) return ((DanexParserVisitor<? extends T>)visitor).visitCompilationUnit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CompilationUnitContext compilationUnit() throws RecognitionException {
		CompilationUnitContext _localctx = new CompilationUnitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_compilationUnit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << HASH) | (1L << CLASS) | (1L << PUBLIC) | (1L << PRIVATE) | (1L << STATIC) | (1L << USE) | (1L << IDENTIFIER) | (1L << LPAREN))) != 0)) {
				{
				{
				setState(88);
				statement();
				}
				}
				setState(93);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(94);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public ClassDeclContext classDecl() {
			return getRuleContext(ClassDeclContext.class,0);
		}
		public MethodDeclContext methodDecl() {
			return getRuleContext(MethodDeclContext.class,0);
		}
		public TopLevelMethodDeclContext topLevelMethodDecl() {
			return getRuleContext(TopLevelMethodDeclContext.class,0);
		}
		public ImportStmtContext importStmt() {
			return getRuleContext(ImportStmtContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DanexParserListener ) ((DanexParserListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DanexParserListener ) ((DanexParserListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DanexParserVisitor ) return ((DanexParserVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(100);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(96);
				classDecl();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(97);
				methodDecl();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(98);
				topLevelMethodDecl();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(99);
				importStmt();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportStmtContext extends ParserRuleContext {
		public TerminalNode USE() { return getToken(DanexParser.USE, 0); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(DanexParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(DanexParser.IDENTIFIER, i);
		}
		public TerminalNode SEMI() { return getToken(DanexParser.SEMI, 0); }
		public TerminalNode AS() { return getToken(DanexParser.AS, 0); }
		public ImportStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DanexParserListener ) ((DanexParserListener)listener).enterImportStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DanexParserListener ) ((DanexParserListener)listener).exitImportStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DanexParserVisitor ) return ((DanexParserVisitor<? extends T>)visitor).visitImportStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportStmtContext importStmt() throws RecognitionException {
		ImportStmtContext _localctx = new ImportStmtContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_importStmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(USE);
			setState(103);
			match(IDENTIFIER);
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==AS) {
				{
				setState(104);
				match(AS);
				setState(105);
				match(IDENTIFIER);
				}
			}

			setState(108);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassDeclContext extends ParserRuleContext {
		public TerminalNode CLASS() { return getToken(DanexParser.CLASS, 0); }
		public TerminalNode IDENTIFIER() { return getToken(DanexParser.IDENTIFIER, 0); }
		public ClassBodyContext classBody() {
			return getRuleContext(ClassBodyContext.class,0);
		}
		public List<AnnotationContext> annotation() {
			return getRuleContexts(AnnotationContext.class);
		}
		public AnnotationContext annotation(int i) {
			return getRuleContext(AnnotationContext.class,i);
		}
		public List<ModifierContext> modifier() {
			return getRuleContexts(ModifierContext.class);
		}
		public ModifierContext modifier(int i) {
			return getRuleContext(ModifierContext.class,i);
		}
		public ClassDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DanexParserListener ) ((DanexParserListener)listener).enterClassDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DanexParserListener ) ((DanexParserListener)listener).exitClassDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DanexParserVisitor ) return ((DanexParserVisitor<? extends T>)visitor).visitClassDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassDeclContext classDecl() throws RecognitionException {
		ClassDeclContext _localctx = new ClassDeclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_classDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==HASH) {
				{
				{
				setState(110);
				annotation();
				}
				}
				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(119);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PUBLIC) | (1L << PRIVATE) | (1L << STATIC))) != 0)) {
				{
				{
				setState(116);
				modifier();
				}
				}
				setState(121);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(122);
			match(CLASS);
			setState(123);
			match(IDENTIFIER);
			setState(124);
			classBody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassBodyContext extends ParserRuleContext {
		public TerminalNode LBRACE() { return getToken(DanexParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(DanexParser.RBRACE, 0); }
		public List<ClassBodyMemberContext> classBodyMember() {
			return getRuleContexts(ClassBodyMemberContext.class);
		}
		public ClassBodyMemberContext classBodyMember(int i) {
			return getRuleContext(ClassBodyMemberContext.class,i);
		}
		public ClassBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DanexParserListener ) ((DanexParserListener)listener).enterClassBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DanexParserListener ) ((DanexParserListener)listener).exitClassBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DanexParserVisitor ) return ((DanexParserVisitor<? extends T>)visitor).visitClassBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassBodyContext classBody() throws RecognitionException {
		ClassBodyContext _localctx = new ClassBodyContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_classBody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(LBRACE);
			setState(130);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << HASH) | (1L << CLASS) | (1L << PUBLIC) | (1L << PRIVATE) | (1L << STATIC) | (1L << IDENTIFIER) | (1L << LPAREN))) != 0)) {
				{
				{
				setState(127);
				classBodyMember();
				}
				}
				setState(132);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(133);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassBodyMemberContext extends ParserRuleContext {
		public MethodDeclContext methodDecl() {
			return getRuleContext(MethodDeclContext.class,0);
		}
		public ClassDeclContext classDecl() {
			return getRuleContext(ClassDeclContext.class,0);
		}
		public ClassBodyMemberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classBodyMember; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DanexParserListener ) ((DanexParserListener)listener).enterClassBodyMember(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DanexParserListener ) ((DanexParserListener)listener).exitClassBodyMember(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DanexParserVisitor ) return ((DanexParserVisitor<? extends T>)visitor).visitClassBodyMember(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassBodyMemberContext classBodyMember() throws RecognitionException {
		ClassBodyMemberContext _localctx = new ClassBodyMemberContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_classBodyMember);
		try {
			setState(137);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(135);
				methodDecl();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(136);
				classDecl();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodDeclContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(DanexParser.IDENTIFIER, 0); }
		public TerminalNode LPAREN() { return getToken(DanexParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(DanexParser.RPAREN, 0); }
		public MethodBodyContext methodBody() {
			return getRuleContext(MethodBodyContext.class,0);
		}
		public List<AnnotationContext> annotation() {
			return getRuleContexts(AnnotationContext.class);
		}
		public AnnotationContext annotation(int i) {
			return getRuleContext(AnnotationContext.class,i);
		}
		public ResultDeclContext resultDecl() {
			return getRuleContext(ResultDeclContext.class,0);
		}
		public List<ModifierContext> modifier() {
			return getRuleContexts(ModifierContext.class);
		}
		public ModifierContext modifier(int i) {
			return getRuleContext(ModifierContext.class,i);
		}
		public ParamListContext paramList() {
			return getRuleContext(ParamListContext.class,0);
		}
		public MethodDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_methodDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DanexParserListener ) ((DanexParserListener)listener).enterMethodDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DanexParserListener ) ((DanexParserListener)listener).exitMethodDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DanexParserVisitor ) return ((DanexParserVisitor<? extends T>)visitor).visitMethodDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MethodDeclContext methodDecl() throws RecognitionException {
		MethodDeclContext _localctx = new MethodDeclContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_methodDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==HASH) {
				{
				{
				setState(139);
				annotation();
				}
				}
				setState(144);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(146);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LPAREN) {
				{
				setState(145);
				resultDecl();
				}
			}

			setState(151);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PUBLIC) | (1L << PRIVATE) | (1L << STATIC))) != 0)) {
				{
				{
				setState(148);
				modifier();
				}
				}
				setState(153);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(154);
			match(IDENTIFIER);
			setState(155);
			match(LPAREN);
			setState(157);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IDENTIFIER) {
				{
				setState(156);
				paramList();
				}
			}

			setState(159);
			match(RPAREN);
			setState(160);
			methodBody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TopLevelMethodDeclContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(DanexParser.IDENTIFIER, 0); }
		public TerminalNode LPAREN() { return getToken(DanexParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(DanexParser.RPAREN, 0); }
		public MethodBodyContext methodBody() {
			return getRuleContext(MethodBodyContext.class,0);
		}
		public List<AnnotationContext> annotation() {
			return getRuleContexts(AnnotationContext.class);
		}
		public AnnotationContext annotation(int i) {
			return getRuleContext(AnnotationContext.class,i);
		}
		public ResultDeclContext resultDecl() {
			return getRuleContext(ResultDeclContext.class,0);
		}
		public List<ModifierContext> modifier() {
			return getRuleContexts(ModifierContext.class);
		}
		public ModifierContext modifier(int i) {
			return getRuleContext(ModifierContext.class,i);
		}
		public ParamListContext paramList() {
			return getRuleContext(ParamListContext.class,0);
		}
		public TopLevelMethodDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_topLevelMethodDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DanexParserListener ) ((DanexParserListener)listener).enterTopLevelMethodDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DanexParserListener ) ((DanexParserListener)listener).exitTopLevelMethodDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DanexParserVisitor ) return ((DanexParserVisitor<? extends T>)visitor).visitTopLevelMethodDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TopLevelMethodDeclContext topLevelMethodDecl() throws RecognitionException {
		TopLevelMethodDeclContext _localctx = new TopLevelMethodDeclContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_topLevelMethodDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(165);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==HASH) {
				{
				{
				setState(162);
				annotation();
				}
				}
				setState(167);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(169);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LPAREN) {
				{
				setState(168);
				resultDecl();
				}
			}

			setState(174);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PUBLIC) | (1L << PRIVATE) | (1L << STATIC))) != 0)) {
				{
				{
				setState(171);
				modifier();
				}
				}
				setState(176);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(177);
			match(IDENTIFIER);
			setState(178);
			match(LPAREN);
			setState(180);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IDENTIFIER) {
				{
				setState(179);
				paramList();
				}
			}

			setState(182);
			match(RPAREN);
			setState(183);
			methodBody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ResultDeclContext extends ParserRuleContext {
		public TerminalNode LPAREN() { return getToken(DanexParser.LPAREN, 0); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(DanexParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(DanexParser.IDENTIFIER, i);
		}
		public TerminalNode RPAREN() { return getToken(DanexParser.RPAREN, 0); }
		public ResultDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_resultDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DanexParserListener ) ((DanexParserListener)listener).enterResultDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DanexParserListener ) ((DanexParserListener)listener).exitResultDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DanexParserVisitor ) return ((DanexParserVisitor<? extends T>)visitor).visitResultDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ResultDeclContext resultDecl() throws RecognitionException {
		ResultDeclContext _localctx = new ResultDeclContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_resultDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(185);
			match(LPAREN);
			setState(186);
			match(IDENTIFIER);
			setState(188);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IDENTIFIER) {
				{
				setState(187);
				match(IDENTIFIER);
				}
			}

			setState(190);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AnnotationContext extends ParserRuleContext {
		public TerminalNode HASH() { return getToken(DanexParser.HASH, 0); }
		public TerminalNode IDENTIFIER() { return getToken(DanexParser.IDENTIFIER, 0); }
		public AnnotationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_annotation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DanexParserListener ) ((DanexParserListener)listener).enterAnnotation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DanexParserListener ) ((DanexParserListener)listener).exitAnnotation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DanexParserVisitor ) return ((DanexParserVisitor<? extends T>)visitor).visitAnnotation(this);
			else return visitor.visitChildren(this);
		}
	}
